# Q-Array-G4

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DetectorConstruction_CURIE.hh  G4History.macro  LICENSE  Multi_Source_Set_Up.sh  Proto_Full_Set_Up.mac.txt  README.md  Set_Up.mac.rtf  Set_Up.mac.txt  Start_Point.sh  Test_Multi_Spectra.csv  dspx_cosmic_batch.mac  dspx_cosmic_visual.mac  geometry_lab_proton.mac  geometry_lab_proton_batch.mac  init_vis.mac  leiden_cosmic_batch.mac  main.cc  pyproject.toml  run_test.mac  setup.cfg  setup.py  sort_sim_data.py  source_position.mac  spectrum.mac  spectrum.mac.rtf  spectrum.mac.txt  temp_init.mac  template_multi_source.mac  template_source.mac  test.json  test_nt_scint_II_full_t1.csv  test_nt_scint_II_full_t5.csv  test_nt_scint_II_t1.csv  test_nt_scint_II_t2.csv  (+14 more)
.agents/: 00_Overview.md  01_Implementation_Plans.md  02_DSPX_Cryostat_Dimensions.md  03_Geant4_Tutorial_Notes.md  04_Geometry_Module_Reference.md  05_STL_Placement_Workflow.md  06_Detector_Box_CAD_Import_Plan.md  07_Lab_Space_Dimensions.md  cryostat_merge_plan.md  detector-box-cad-import-plan.md  diagram_buildscreen.txt  diagram_cryostat.txt  diagram_cryostat_bucket.txt  diagram_cryostat_dspx.txt  geant4_tutorial_summary.md  rename_qr_namespace_to_qarray.md  simulation_geometry_structure.md  stl_placement_workflow.md
include/: ActionInitialization.hh  DataReducer.hh  DataWriter.hh  DetectorConstruction.hh  DetectorConstruction_DSPX.hh  DetectorConstruction_LEIDEN_II.hh  EventAction.hh  EventUtils.hh  ExtrudedLayerBuilder.hh  GdsJsonParser.hh  HitData.hh  MCSampler.hh  Metadata.hh  MutexWrapper.hh  PrimaryGeneratorAction.hh  QuasiparticleDetectorParameters.hh  QuasiparticleResonatorAssembly.hh  Run.hh  RunAction.hh  ScintillatorHit.hh  ScintillatorSD.hh  SensitiveDetector.hh  SteppingAction.hh  TrackInformation.hh  TrackingAction.hh  json.hh
include/Geometry/: CryostatBuilder.hh  Shapes.hh
macros/: Im_QP_run.mac  Immortal_QP.mac  blank_template.mac  dspx_cosmic_batch.mac  dspx_cosmic_visual.mac  gps_double_neutron_gamma_test.mac  gps_double_neutron_gamma_visual.mac  gps_multi_demo_test.mac  gps_multi_demo_visual.mac  gps_single_neutron_test.mac  gps_single_neutron_visual.mac  init_vis.mac  leiden_cosmic_visual.mac  neutron_gun_batch.mac  particle_gun_demo.mac  visual_tester.mac  visualizer.mac
macros/sources/: Gamma_Spectrum.txt  Gamma_Spectrum_v2.csv  ISO_Neutron_Spectrum.txt  ISO_neutron_spectrum.csv  gps_double_neutron_gamma_sources.mac  gps_multi_demo_sources.mac  gps_single_neutron_source.mac  spectrum.mac  spectrum_gamma.mac
macros/templates/: batch_template.mac  template_multi_source.mac  template_multi_source_batch.mac  template_multi_source_visual.mac  template_source.mac  template_source_position.mac
notebook/: diffusion_csv.py  diffusion_plot.py  initial_ene_comparison_noisy_data.py  initial_energy_comparison_generator.py  plot_sn_energy.py  qpHeatmap.py
output/Data/Run_1_1_geantino_test_hist_06:22_manual/Metadata/: test.json  test_run1.json  test_run3.json  test_run4.json  test_run5.json  test_run6.json
output/Data/Run_1_1_geantino_test_hist_06:22_manual/Rawdata/: test_nt_scint_II_full_t0.csv  test_nt_scint_II_full_t2.csv  test_nt_scint_II_full_t3.csv  test_nt_scint_II_full_t4.csv  test_nt_scint_II_full_t6.csv  test_nt_scint_II_full_t7.csv  test_nt_scint_II_t0.csv  test_nt_scint_II_t4.csv  test_nt_scint_I_full_t1.csv  test_nt_scint_I_full_t2.csv  test_nt_scint_I_full_t5.csv  test_nt_scint_I_full_t6.csv  test_nt_scint_I_full_t7.csv  test_nt_scint_I_t1.csv  test_nt_scint_I_t2.csv  test_nt_scint_I_t3.csv  test_nt_scint_I_t5.csv  test_nt_scint_I_t7.csv
scripts/: Gamma_Source.csv  Gamma_Spectrum copy.csv  Gamma_Spectrum.csv  Gamma_Spectrum_Messy.csv  Gamma_Spectrum_v2.csv  Geantino_Source.csv  ISO_neutron_spectrum.csv  Multi_Source.csv  Multi_Source_Set_Up.sh  Multi_Source_Spectrums.csv  Neutron_Source.csv  Start_Point.sh  batch_loop_script.sh  batch_mode.sh  consolidate_csvs.sh  convert_spectrum.sh  dspx_AmBe_batch.sh  dspx_AmBe_visual.sh  example_multi_source.csv  immortal_qp_slurm.sh  initial_energy_comparison_generator.py  initial_energy_from_log.sh  launch_points.csv  multi_source_setup.sh  run_dspx_cosmic_batch.sh  run_dspx_start_point.sh  run_submit.sh  sort_sim_data.py  submit_G4_v01x_20230601.sh  sync_msmt.py
scripts/gds/: Bounding_Box.csv  README_gds.md  gds_flatten.py  json_to_gds.py  verified_geometry.gds
scripts/sources/: test_spectrum_gamma.mac
src/: ActionInitialization.cc  DataReducer.cc  DataWriter.cc  DetectorConstruction.cc  DetectorConstruction_CURIE.cc  DetectorConstruction_DSPX.cc  DetectorConstruction_LEIDEN_II.cc  EventAction.cc  ExtrudedLayerBuilder.cc  GdsJsonParser.cc  HitData.cc  Metadata.cc  PrimaryGeneratorAction.cc  QuasiparticleResonatorAssembly.cc  QuasiparticleTransmissionLine.cc  Run.cc  RunAction.cc  ScintillatorHit.cc  ScintillatorSD.cc  SensitiveDetector.cc  SteppingAction.cc  TrackInformation.cc  TrackingAction.cc
src/Geometry/: CryostatBuilder.cc  Shapes.cc
tests/: check_dspx_sn_only_scoring.sh  check_energy_deposition.sh  cry_disabled.mac  dspx_scoring_manifest.txt  dspx_sn_only_scoring.mac  energy_deposition_dspx.mac  energy_deposition_leiden_ii.mac  mt_single_thread_no_vis.mac  particle_gun_smoke.mac  run_test_no_vis.mac
